--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: BY Blog
-SEOTitle: Pat的博客 | BY Blog
+title: Pat Blog
+SEOTitle: Pat的博客 | Pat Blog
 header-img: img/post-bg-desk.jpg
 email: 1357113644@qq.com
 description: "Every failure is leading towards success."
